# umamurl

./: CLI.md  INSTALLATION.md  LICENSE  Makefile  README.md  favicon.svgz  shell.nix  urls.sqlite
.claude/: settings.local.json
.github/: cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
actix/: Cargo.toml
actix/src/: auth.rs  config.rs  database.rs  main.rs  services.rs  tests.rs  utils.rs
resources/: index.html
resources/static/: 404.html  script.js  styles.css
