# SPDX-FileCopyrightText: 2023 Emmanuel Salomon <emmanuel.salomon@gmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "umamurl"
version = "1.0.0"
edition = "2024"
authors = ["Emmanuel Salomon <emmanuel.salomon@gmail.com>"]
license = "mit"
description = "A fast, lightweight URL shortener with built-in Umami analytics."
homepage = "https://github.com/ManUtopiK/umamurl"
documentation = "https://github.com/ManUtopiK/umamurl"
repository = "https://github.com/ManUtopiK/umamurl"
readme = "README.md"
keywords = [
    "rust",
    "self-hosted",
    "url-shortener",
    "link-shortener",
    "umami",
    "analytics",
    "actix-web",
]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.13.0"
actix-files = "0.6.10"
rusqlite = { version = "0.38.0", features = [ "bundled" ] }
regex = "1.12.3"
rand = "0.10.0"
passwords = "3.1.16"
actix-session = { version = "0.11.0", features = [ "cookie-session" ] }
nanoid = "0.4.0"
serde = { version = "1.0.228", features = [ "derive", "rc" ] }
serde_json = "1.0.149"
argon2 = "0.5.3"
chrono = "0.4.44"
tokio = "1.50.0"
log = "0.4.29"
env_logger = "0.11.9"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
actix-http = "3.12.0"
actix-service = "2.0.3"
regex = "1.12.3"
